--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-The SUDMEX_TMS dataset is the result of a case-control study of cocaine use disorder patients. The study was done at the National Institute of Psychiatry in Mexico City by PIs Dr. Eduardo A. Garza-Villarreal and Jorge J. Gonzalez Olvera.
+The SUDMEX_CONN dataset is the result of a case-control study of cocaine use disorder patients. The study was done at the National Institute of Psychiatry in Mexico City by PIs Dr. Eduardo A. Garza-Villarreal and Jorge J. Gonzalez Olvera.
 
 The MRI sequences were: 1) T1-weighted, 2) rsfMRI 10 min, 3) HARDI-DWI multishell.
 
